--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,9 +12,11 @@
     "flowbite": "^2.3.0",
     "flowbite-react": "^0.7.2",
     "http-proxy-middleware": "^3.0.0",
+    "leaflet": "^1.9.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.0.1",
+    "react-leaflet": "^4.2.1",
     "react-router-dom": "^6.22.3",
     "react-scripts": "5.0.1",
     "react-toastify": "^10.0.5",
