--- a/frontend/package.json
+++ b/frontend/package.json
@@ -51,6 +51,7 @@
     ]
   },
   "devDependencies": {
+    "@iconify/tailwind": "^1.1.1",
     "daisyui": "^4.7.3",
     "tailwindcss": "^3.4.1"
   }
